--- a/playbooks/install-typha-calinco-node.yml
+++ b/playbooks/install-typha-calinco-node.yml
@@ -79,6 +79,11 @@
         owner: root
         mode: 0555
 
+    - name: Deploy the typha
+      command:
+        cmd:  kubectl apply -f /tmp/roleaccount
+        creates: /tmp/deployinstalled
+
     - name: create deploymnet
       copy:
         content: |
