Fix tab and file namae

--- a/playbooks/install-typha-calinco-node.yml
+++ b/playbooks/install-typha-calinco-node.yml
@@ -195,32 +195,32 @@
         cmd:  kubectl apply -f /tmp/deployaccount
         creates: /tmp/deployinstalled
 
-    - name: create deploymnet
-      copy: /tmp/deploycaliconode
-      content: |
-        apiVersion: v1
-        kind: Service
-        metadata:
-          name: calico-typha
-          namespace: kube-system
-          labels:
-            k8s-app: calico-typha
-        spec:
-          ports:
-            - port: 5473
-              protocol: TCP
-              targetPort: calico-typha
-              name: calico-typha
-          selector:
-            k8s-app: calico-typha
-      force: no
-      group: root
-      owner: root
-      mode: 0555
+    - name: create deployment of calicnode
+      copy: /tmp/deploycaliconodetypha
+        content: |
+          apiVersion: v1
+          kind: Service
+          metadata:
+            name: calico-typha
+            namespace: kube-system
+            labels:
+              k8s-app: calico-typha
+          spec:
+            ports:
+              - port: 5473
+                protocol: TCP
+                targetPort: calico-typha
+                name: calico-typha
+            selector:
+              k8s-app: calico-typha
+        force: no
+        group: root
+        owner: root
+        mode: 0555
 
     - name: Deploy the typha
       command:
-        cmd:  kubectl apply -f /tmp/deploycaliconode
+        cmd:  kubectl apply -f  /tmp/deploycaliconodetypha
         creates: /tmp/deployinstalled
 
     - name: save state file
