--- a/playbooks/install-calico-node.yml
+++ b/playbooks/install-calico-node.yml
@@ -191,7 +191,7 @@
                         value: bird
             # Cluster type to identify the deployment type
                       - name: CLUSTER_TYPE
-                        value: "k8s,bgp"
+                        value: "k8s"
             # Auto-detect the BGP IP address.
                       - name: IP
                         value: "autodetect"
