--- a/playbooks/install-calico-node.yml
+++ b/playbooks/install-calico-node.yml
@@ -174,13 +174,11 @@
                     image: calico/node:v3.8.0
                     env:
                 # Use Kubernetes API as the backing datastore.
-                      - name: DATASTORE_TYPE
-                        value: "kubernetes"
                       - name: FELIX_TYPHAK8SSERVICENAME
                         value: calico-typha
                  # Wait for the datastore.
                       - name: FELIX_IGNORELOOSERPF
-                        value: "true"
+                        value: true
                       - name: WAIT_FOR_DATASTORE
                         value: "true"
                 # Set based on the k8s node name.
