Sometimes you synchronize too much ha ha ha

--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -145,6 +145,8 @@
       synchronize:
         src: "{{ workspace }}/etc/kubernetes/"
         dest: /etc/kubernetes/
+        rsync_opts:
+          - "--exclude=/etc/kubernetes/manifests/"
         recursive: yes
 
     - name: Creating a file with content
