Location means everything though exclude isn't working WHYgit add -u

--- a/playbooks/create-ssl-certs.yml
+++ b/playbooks/create-ssl-certs.yml
@@ -60,4 +60,7 @@
         mode: pull
         src: "/etc/kubernetes/"
         dest: "{{ workspace }}/etc/kubernetes/"
+        rsync_opts:
+          - "--exclude=/etc/kubernetes/manifests/"
+        recursive: yes
         recursive: yes
