Exclude foldergit add -u!

--- a/playbooks/create-ssl-certs.yml
+++ b/playbooks/create-ssl-certs.yml
@@ -61,6 +61,5 @@
         src: "/etc/kubernetes/"
         dest: "{{ workspace }}/etc/kubernetes/"
         rsync_opts:
-          - "--exclude=/etc/kubernetes/manifests/"
-        recursive: yes
+          - "--exclude=manifests"
         recursive: yes
