--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -141,13 +141,20 @@
         cmd:  sh -c "sudo /home/ubuntu/run_to_connect_node.sh"
         creates: /etc/rc.local
 
+    - name: Specifying a destination path
+      ansible.builtin.fetch:
+        src: /etc/kubernetes/manifests/
+        dest: "{{ workspace }}/etc/kubernetes/"
+        flat: yes
+
+
     - name: synchroize master folder to node /etc/kubernetes
       synchronize:
         src: "{{ workspace }}/etc/kubernetes/"
         dest: /etc/kubernetes/
-        rsync_opts:
-          - "--exclude=manifests"
         recursive: yes
+
+
 
     - name: Creating a file with content
       copy:
