--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -141,12 +141,12 @@
         cmd:  sh -c "sudo /home/ubuntu/run_to_connect_node.sh"
         creates: /etc/rc.local
 
-    - name: Specifying a destination path
-      ansible.builtin.fetch:
-        src: /etc/kubernetes/manifests/
-        dest: "{{ workspace }}/etc/kubernetes/"
-        flat: yes
-
+    - name: copy kubernetes from node
+      synchronize:
+        mode: pull
+        src: "/etc/kubernetes/manifests"
+        dest: "{{ workspace }}/etc/kubernetes/manifests/"
+        recursive: yes
 
     - name: synchroize master folder to node /etc/kubernetes
       synchronize:
