--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -141,13 +141,9 @@
         cmd:  sh -c "sudo /home/ubuntu/run_to_connect_node.sh"
         creates: /etc/rc.local
 
-    - name: copy kubernetes from node
-      synchronize:
-        mode: pull
-        src: "/etc/kubernetes/manifests/"
-        dest: "{{ workspace }}/etc/kubernetes/manifests/"
-        checksum: yes
-        recursive: yes
+
+    - name: backup the manifests folder
+      copy: src=/etc/kubernetes/manifests/ dest=/tmp/manifests remote_src=yes directory_mode=yes
 
     - name: synchroize master folder to node /etc/kubernetes
       synchronize:
@@ -155,6 +151,14 @@
         dest: /etc/kubernetes/
         checksum: yes
         recursive: yes
+
+    - name: remove manifest folder
+      file:
+        path: /etc/kubernetes/manifests/
+        state: absent
+
+    - name: restore the manifests folder
+      copy:/tmp/manifests/ src= dest=etc/kubernetes/manifests/ remote_src=yes directory_mode=yes
 
     - name: Creating a file with content
       copy:
