--- a/playbooks/install-calico-node.yml
+++ b/playbooks/install-calico-node.yml
@@ -174,7 +174,7 @@
                     image: calico/node:v3.8.0
                     env:
                       - name: CALICO_NETWORKING_BACKEND
-                        value: "vxlan"
+                        value: "bird"
                       # Use Kubernetes API as the backing datastore
                       - name: DATASTORE_TYPE
                         value: "kubernetes"
@@ -192,7 +192,7 @@
                             fieldPath: spec.nodeName
                  # Cluster type to identify the deployment type
                       - name: CLUSTER_TYPE
-                        value: "k8s"
+                        value: "k8s,bgp"
                       - name: FELIX_ROUTESOURCE
                         value: CalicoIPAM
                   # Disable file logging so kubectl logs works.
@@ -240,8 +240,9 @@
                       exec:
                         command:
                           - /bin/calico-node
+                          - -bird-ready
                           - -felix-ready
-                      periodSeconds: 10
+                        periodSeconds: 10
 
                     volumeMounts:
                       - mountPath: /lib/modules
