--- a/playbooks/install-calico-node.yml
+++ b/playbooks/install-calico-node.yml
@@ -193,6 +193,9 @@
                  # Cluster type to identify the deployment type
                       - name: CLUSTER_TYPE
                         value: "k8s,bgp"
+                # Auto-detect the BGP IP address.
+                      - name: IP
+                        value: "autodetect"
                       - name: FELIX_ROUTESOURCE
                         value: CalicoIPAM
                   # Disable file logging so kubectl logs works.
