--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -21,6 +21,7 @@
         name:
           - yum-utils
           - python3
+          - openssl
           - python3-pip
         state: installed
 
