--- a/playbooks/deploy-squid-playbook.yml
+++ b/playbooks/deploy-squid-playbook.yml
@@ -5,16 +5,16 @@
 
   tasks:
     - name: Install required system packages
-      apt:
-        pkg:
-          - apt-transport-https
-          - ca-certificates
-          - software-properties-common
+      yum:
+        name:
+          - avahi-tools
+          - avahi-ui-tools
           - curl
-          - python3-setuptools
+          - python3-tools
           - squid
           - avahi-daemon
-          - apache2
+          - epel-release
+          - httpd
 
 
     - name: Create a symbolic link
@@ -31,9 +31,6 @@
         group: www-data
         recurse: yes
         mode: '0770'
-
-    - name: Update packages list
-      apt: update_cache=yes
 
     - name: Explicitly specifying named matched groups
       replace:
